# mozo

./: .build.yml  .travis.yml  AUTHORS  COPYING  ChangeLog.pre-git  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  autogen.sh  configure  configure.ac  makepot  meson.build  mozo.doap  mozo.in  mozo.pot  post_install.py
.github/workflows/: archlinux.sh  builds.yml  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config  config_20221028215449.bak
Alacarte/: MainWindow.py  MenuEditor.py  util.py
Mozo/: MainWindow.py  Makefile.am  Makefile.in  MenuEditor.py  config.py.in  meson.build  util.py
data/: Makefile.am  Makefile.in  meson.build  mozo.1  mozo.desktop.in.in  mozo.ui
data/icons/: Makefile.am  Makefile.in  meson.build
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  ar_AE.po  as.po  ast.po  az.po  be.po  be@latin.po  bem.po  bg.po  bn.po  bn_IN.po  bqi.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_AT.po  de_CH.po  dz.po  el.po  en@shaw.po  en_AU.po  en_BR.po  en_CA.po  (+149 more)
